--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Image Area Selector</title>
+    <meta
+      name="image area selector"
+      content="Show the data of selected area in an upload image."
+    />
   </head>
   <body>
     <div id="root"></div>
